# uoh-ay26-book-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: PLAN.md  PRD.md  TODO.md
docs/topic_ideas/: README.md  computer_science_english_article.md  fashion_hebrew_book.md  fast_fashion_hebrew_book.md  food_hebrew_article.md  hairstyles_english_article.md  healthcare_ai_agents_english_article.md  sports_english_book.md  worldcup_2026_hebrew_book.md
latex/: main.tex  main_template.tex  references.bib
latex/chapters/: architecture.tex  bidi.tex  crewai_workflow.tex  governance.tex  introduction.tex  online_article.tex  qa_appendix.tex
output/: portfolio_page_counts.md
scripts/: build.py  build_required_outputs.py  generate_online.py  rebuild_fast_fashion_hebrew.py  setup_env.ps1
src/book_generator/: __init__.py  agents.py  cli.py  config.py  cover_metadata.py  crewai_agents.py  crewai_llm.py  crewai_pipeline.py  crewai_tasks.py  document_options.py  latex_project.py  latex_sanitizer.py  latex_table_sanitizer.py  localized_titles.py  models.py  online_providers.py  page_count.py  page_expander.py  page_limiter.py  pdf_outputs.py  pipeline.py  portfolio_bodies.py  rendering.py
tests/: test_pipeline.py
