[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uoh-ay26-book-generator"
version = "0.1.0"
description = "Online CrewAI article generator with LaTeX PDF output for Assignment 03"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Aisha Abu Dahesh" },
    { name = "Yousef Asadi" },
]
dependencies = [
    "crewai[google-genai]>=1.0.0,<2.0.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
book-generator = "book_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"